--- a/update - Portuguese (PORT).html
+++ b/update - Portuguese (PORT).html
@@ -896,22 +896,22 @@ $( document ).ready(function() {
       <div class="col-md-2 col-xs-6">
         <div class="single_ft quicklinks">
           <h4>Navegação</h4><!--Navigation-->
-          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="915119" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">Para Bibliotecas</a><br>
-          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="915120" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">Para Pesquisadores</a><br>
-          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="915121" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Produtos &amp; Serviços</a><br>
-          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="915122" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">Para Clientes</a><br>
-          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="915123" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Eventos</a><br>
-          <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="915124" xt="SPCLICK" xtlinkname="Footer_Navigation_About">Sobre</a><br>
-          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="915125" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">Para Bibliotecas</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">Para Pesquisadores</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Produtos &amp; Serviços</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">Para Clientes</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Eventos</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">Sobre</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
         </div>
       </div>
       <div class="col-md-2 col-xs-6">
         <div class="single_ft quicklinks">
           <h4>Suporte</h4><!--Support-->
-          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915126" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Centro de Suporte</a><br>
-          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="915127" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Ferramentas e Recursos</a><br>
-          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="915128" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Webinars de Treinamento</a><br>
-          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="915129" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Centro de Suporte</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Ferramentas e Recursos</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Webinars de Treinamento</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
         </div>
       </div>
     </div>
@@ -924,12 +924,12 @@ $( document ).ready(function() {
 <div class="main_footer">
   <div class="container links col-xs-12">
     <div style="text-align: center;">
-      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="915130" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
-      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="915131" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
-      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="915132" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
       <div id="teconsent" style="display: inline;"></div>
-      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="915133" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
-      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="915134" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
     </div>
   </div>
 </div><!-- /.main_footer -->
