--- a/confirmation - English (EN).html
+++ b/confirmation - English (EN).html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-  <title>ProQuest Preference Center Confirmation</title>
-  <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ProQuest Preference Center Confirmation</title>
+<link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
+<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
-  <meta name="com.silverpop.defaultsource" content="Web" />
-  <meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
+<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
+<meta name="com.silverpop.defaultsource" content="Web" />
+<meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/print-stylesheet.css" media="print" />
+<style type="text/css">
+.main_footer {
+  float: left;
+  width: 100%;
+  padding: 0;
+}
+.main_footer a {
+  color: white;
+}
+.main_footer .links {
+  padding: 5px 15px;
+}
+.main_footer .links a {
+  font-size: 12px;
+  padding: 5px;
+}
+a:hover, a:focus {
+  text-decoration: none;
+}
+</style>
 
-  <!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-  <style>
-  .main_footer {
-      float: left;
-      width: 100%;
-      padding: 0;
-  }
-  .main_footer a {
-      color: white;
-  }
-  .main_footer .links {
-      padding: 5px 15px;
-  }
-  .main_footer .links a {
-      font-size: 12px;
-      padding: 5px;
-  }
-  a:hover, a:focus {
-      text-decoration: none;
-  }
-  </style>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 
 <body>
