--- a/confirmation - Spanish (ES).html
+++ b/confirmation - Spanish (ES).html
@@ -72,9 +72,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-              <li><a  name="TopNav_SupportCenter" xtlinkname="TopNav_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850441">Support Center |</a></li>
-              <li><a  name="TopNavNews" xtlinkname="TopNavNews" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/news/" xthyperlink="850442">News |</a></li>
-              <li><a  name="TopNav_Contact" xtlinkname="TopNav_Contact" xt="SPCLICKSTREAM" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="850443">Contact</a></li>
+              <li><a name="TopNav_SupportCenter" xtlinkname="TopNav_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+              <li><a name="TopNavNews" xtlinkname="TopNavNews" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/news/">News |</a></li>
+              <li><a name="TopNav_Contact" xtlinkname="TopNav_Contact" xt="SPCLICKSTREAM" href="https://www.proquest.com/contact/contact-landing.html">Contact</a></li>
             </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
