--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-  <title>ProQuest Unsubscribe</title>
-  <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ProQuest Unsubscribe</title>
+<link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
+<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/print-stylesheet.css" media="print" />
+<style type="text/css">
+.header {
+  color: #333333;
+  font-weight: bold;
+}
+#h3header {
+  font-size: 20px;
+  color: #333333;
+  font-weight: bold;
+}
+hr {
+  display: block;
+  margin: 0.5em auto 0.5em auto;
+  border: 2px inset;
+}
+.pq-lead-text {
+  font-size: 16px;
+}
+.pq-form-label-dark {
+  color: #333333;
+}
+.required {
+  color: #a51f1e;
+}
+.main_footer {
+  float: left;
+  width: 100%;
+  padding: 0;
+}
+.main_footer a {
+  color: white;
+}
+.main_footer .links {
+  padding: 5px 15px;
+}
+.main_footer .links a {
+  font-size: 12px;
+  padding: 5px;
+}
+a:hover, a:focus {
+  text-decoration: none;
+}
+</style>
 
-  <!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-  <style type="text/css">
-  .header {
-      color: #333333;
-      font-weight: bold;
-  }
-  #h3header {
-      font-size: 20px;
-      color: #333333;
-      font-weight: bold;
-  }
-  hr {
-    display: block;
-    margin: 0.5em auto 0.5em auto;
-    border: 2px inset;
-  }
-  .pq-lead-text {
-    font-size: 16px;
-  }
-  .pq-form-label-dark {
-    color: #333333;
-  }
-  .required {
-    color: #a51f1e;
-  }
-  .main_footer {
-      float: left;
-      width: 100%;
-      padding: 0;
-  }
-  .main_footer a {
-      color: white;
-  }
-  .main_footer .links {
-      padding: 5px 15px;
-  }
-  .main_footer .links a {
-      font-size: 12px;
-      padding: 5px;
-  }
-  a:hover, a:focus {
-      text-decoration: none;
-  }
-  </style>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 
 <body>
