GMS-12751, ES confirmation and unsubscribe pages, retouch update page

--- a/unsubscribe - Portuguese (PORT).html
+++ b/unsubscribe - Portuguese (PORT).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR" class="no-js">
 <head>
-<title>ProQuest Unsubscribe</title>
+<title>ProQuest Cancelamento de assinatura</title>
 <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 <meta charset="utf-8" />
@@ -160,7 +160,7 @@ a:hover, a:focus {
       <div class="panel">
         <h2>Atualizou as suas preferências recentemente?</h2>
         <p>Nos esforçamos para oferecer aos nossos assinantes conteúdo de qualidade que é relevante para eles usando as preferências de assinatura individuais.
-        Se você simplesmente quer receber menos ou outros tipos de comunicações, sugerimos que você <a href="http://go.proquest.com/preferences-pt" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="850503" style="color: #00a0df; text-decoration:none">atualize suas preferências de assinatura</a> ao invés de cancelar.</p>
+        Se você simplesmente quer receber menos ou outros tipos de comunicações, sugerimos que você <a href="http://go.proquest.com/preferences-pt" name="update_preferences" target="_blank" style="color: #00a0df; text-decoration: none;">atualize suas preferências de assinatura</a> ao invés de cancelar.</p>
 
       <!-- ======== START FORM ======== -->
         <form id="unsubscribe" method="post" style="margin-top: 20px;">
