--- a/confirmation - Spanish (ES).html
+++ b/confirmation - Spanish (ES).html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="es-419" class="no-js">
 <head>
-  <title>ProQuest Preference Center Confirmation</title>
-  <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ProQuest Preference Center Confirmation</title>
+<link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
+<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
-  <meta name="com.silverpop.defaultsource" content="Web" />
-  <meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
+<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
+<meta name="com.silverpop.defaultsource" content="Web" />
+<meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
-  <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/print-stylesheet.css" media="print" />
+<style type="text/css">
+.main_footer {
+  float: left;
+  width: 100%;
+  padding: 0;
+}
+.main_footer a {
+  color: white;
+}
+.main_footer .links {
+  padding: 5px 15px;
+}
+.main_footer .links a {
+  font-size: 12px;
+  padding: 5px;
+}
+a:hover, a:focus {
+  text-decoration: none;
+}
+</style>
 
-  <!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-  <style>
-  .main_footer {
-      float: left;
-      width: 100%;
-      padding: 0;
-  }
-  .main_footer a {
-      color: white;
-  }
-  .main_footer .links {
-      padding: 5px 15px;
-  }
-  .main_footer .links a {
-      font-size: 12px;
-      padding: 5px;
-  }
-  a:hover, a:focus {
-      text-decoration: none;
-  }
-  </style>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 
 <body>
 <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+
+<!-- ============ START Header ============ -->
 
 <div class="header-area">
   <div class="container">
@@ -72,10 +75,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-              <li><a name="TopNav_SupportCenter" xtlinkname="TopNav_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
-              <li><a name="TopNavNews" xtlinkname="TopNavNews" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/news/">News |</a></li>
-              <li><a name="TopNav_Contact" xtlinkname="TopNav_Contact" xt="SPCLICKSTREAM" href="https://www.proquest.com/contact/contact-landing.html">Contact</a></li>
-            </ul>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/LATAM-ES/es-contact/">Contact</a></li>
+              </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
@@ -89,13 +92,17 @@
     <div class="col-md-12">
       <div class="inner_proquest">
         <a href="https://www.proquest.com/LATAM-ES/" target="_blank" name="httpswwwproquestcom">
-          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="22033201" />
         </a>
       </div>
     </div>
   </div>
 </div><!-- /.proquest_part -->
 
+<!-- ============ END Header ============ -->
+
+
+<!-- ============ START Main Body ============ -->
 <div class="background_part">
 
   <div class="container">&nbsp;</div>
@@ -113,55 +120,57 @@
     </div>
   </div>
 
-<!-- ======== START Temporary Footer (to be removed) ======== -->
+</div>
+<!-- ============ END Main Body ============ -->
 
-  <div class="footer_one">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>Navegación</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" xtlinkname="Footer_Navigation_Libraries" xt="SPCLICKSTREAM" href="https://www.proquest.com/libraries" xthyperlink="850445">Para bibliotecas</a><br>
-            <a name="Footer_Navigation_Researchers" xtlinkname="Footer_Navigation_Researchers" xt="SPCLICKSTREAM" href="https://www.proquest.com/researchers" xthyperlink="850446">Para los investigadores</a><br>
-            <a name="Footer_Navigation_ProductsServices" xtlinkname="Footer_Navigation_ProductsServices" xt="SPCLICKSTREAM" href="https://www.proquest.com/products-services" xthyperlink="850447">Productos & Servicios</a><br>
-            <a name="Footer_Navigation_Customers" xtlinkname="Footer_Navigation_Customers" xt="SPCLICKSTREAM" href="https://www.proquest.com/customer-care" xthyperlink="850448">Para clientes</a><br>
-            <a name="Footer_Navigation_Events" xtlinkname="Footer_Navigation_Events" xt="SPCLICKSTREAM" href="https://www.proquest.com/events" xthyperlink="850449">Eventos</a><br>
-            <a name="Footer_Navigation_About" xtlinkname="Footer_Navigation_About" xt="SPCLICKSTREAM" href="https://www.proquest.com/about" xthyperlink="850450">Sobre</a><br>
-            <a name="Footer_Navigation_Blogs" xtlinkname="Footer_Navigation_Blogs" xt="SPCLICKSTREAM" href="https://www.proquest.com/blog" xthyperlink="850451">Blogs</a>
-          </div>
+
+<!-- ============ START Footer ============ -->
+
+<div class="footer_one">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>Navegación</h4><!--Navigation-->
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">Para bibliotecas</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">Para los investigadores</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Productos &amp; Servicios</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">Para clientes</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Eventos</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">Sobre</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
         </div>
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>Soporte</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" xtlinkname="Footer_Support_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850452">Centro de Apoyo</a><br>
-            <a name="Footer_Support_ToolsResources" xtlinkname="Footer_Support_ToolsResources" xt="SPCLICKSTREAM" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="850453">Herramientas y recursos</a><br>
-            <a name="Footer_Support_TrainingWebinars" xtlinkname="Footer_Support_TrainingWebinars" xt="SPCLICKSTREAM" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="850454">Seminarios web de formación</a><br>
-            <a name="Footer_Support_LibGuides" xtlinkname="Footer_Support_LibGuides" xt="SPCLICKSTREAM" href="https://proquest.libguides.com/home" xthyperlink="850455">LibGuides</a>
-          </div>
+      </div>
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>Soporte</h4><!--Support-->
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Centro de Apoyo</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Herramientas y recursos</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Seminarios web de formación</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
         </div>
       </div>
     </div>
-  </div><!-- /.footer_one -->
+  </div>
+</div><!-- /.footer_one -->
 
-  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
-  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
+<!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+<script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
 
-  <div class="main_footer">
-    <div class="container links col-xs-12">
-      <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
-        <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
-      </div>
+<div class="main_footer">
+  <div class="container links col-xs-12">
+    <div style="text-align: center;">
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+      <div id="teconsent" style="display: inline;"></div>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
     </div>
-  </div><!-- /.main_footer -->
+  </div>
+</div><!-- /.main_footer -->
 
-<!-- ======== END Temporary Footer ======== -->
-
-</div><!-- /.background_part -->
+<!-- ============ END Footer ============ -->
 
 <!-- Google Tag Manager -->
 <script>
