--- a/update - Spanish (ES).html
+++ b/update - Spanish (ES).html
@@ -98,8 +98,8 @@ a:hover, a:focus {
 var formLanguage = 'es-419';
 
 // Put language-specific button labels here
-var SELECT_ALL_LABEL = 'Seleccionar todo';
-var UNSELECT_ALL_LABEL = 'Deselecciona todo';
+var SELECT_ALL_LABEL = 'SELECCIONAR TODO';
+var UNSELECT_ALL_LABEL = 'DESELECCIONA TODO';
 
 // Function to set checkboxes from hidden shadow fields mapped to DB fields 
 //  required because Silverpop/IMC/WCA is dain-bramaged and doesn't do it for us
@@ -219,9 +219,9 @@ $( document ).ready(function() {
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915135" xt="SPCLICK" xtlinkname="TopNav_SupportCenter">Support Center |</a></li>
-                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="915136" xt="SPCLICK" xtlinkname="TopNavNews">News |</a></li>
-                <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="915137" xt="SPCLICK" xtlinkname="TopNav_Contact">Contact</a></li>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/LATAM-ES/es-contact/">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -236,7 +236,7 @@ $( document ).ready(function() {
     <div class="col-md-12">
       <div class="inner_proquest">
         <a href="https://www.proquest.com/LATAM-ES/" target="_blank" name="httpswwwproquestcom">
-          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="22033201" />
         </a>
       </div>
     </div>
@@ -248,7 +248,7 @@ $( document ).ready(function() {
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom" xthyperlink="915139" xt="SPCLICK" xtlinkname="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
+          <p><a href="https://www.proquest.com/LATAM-ES/" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
         </div>
         <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Your Email Preferences</span></div>
       </div>
@@ -723,7 +723,7 @@ $( document ).ready(function() {
                 <div class="row">
                   <div class="col-md-4">
                     <div class="form-group">
-                      <input type="button" onclick="toggleCheckboxes('email_collection_types_cbgroup', this);" value="Seleccionar todo" class="btn btn-primary btn-xs select-all-btn" />
+                      <input type="button" onclick="toggleCheckboxes('email_collection_types_cbgroup', this);" value="SELECCIONAR TODO" class="btn btn-primary btn-xs select-all-btn" />
                     </div>
                   </div>
                 </div>
@@ -832,7 +832,7 @@ $( document ).ready(function() {
                 <div class="row">
                   <div class="col-md-4">
                     <div class="form-group">
-                      <input type="button" onclick="toggleCheckboxes('email_topic_pc_cbgroup', this);" value="Seleccionar todo" class="btn btn-primary btn-xs select-all-btn" />
+                      <input type="button" onclick="toggleCheckboxes('email_topic_pc_cbgroup', this);" value="SELECCIONAR TODO" class="btn btn-primary btn-xs select-all-btn" />
                     </div>
                   </div>
                 </div>
@@ -865,8 +865,8 @@ $( document ).ready(function() {
                 <div class="col-xs-12">
                   <div class="form-group">
                     <a name="SubmitButton"></a>
-                    <input type="submit" value="Enviar" class="btn btn-primary btn-lg" />
-                    <input type="button" value="Borrar Preferencias" onclick="clearPreferences();" class="btn btn-primary btn-lg" />
+                    <input type="submit" value="ENVIAR" class="btn btn-primary btn-lg" />
+                    <input type="button" value="BORRAR PREFERENCIAS" onclick="clearPreferences();" class="btn btn-primary btn-lg" />
                   </div>
                 </div>
               </div>
@@ -896,22 +896,22 @@ $( document ).ready(function() {
       <div class="col-md-2 col-xs-6">
         <div class="single_ft quicklinks">
           <h4>Navegación</h4><!--Navigation-->
-          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="915142" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">Para bibliotecas</a><br>
-          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="915143" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">Para los investigadores</a><br>
-          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="915144" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Productos &amp; Servicios</a><br>
-          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="915145" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">Para clientes</a><br>
-          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="915146" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Eventos</a><br>
-          <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="915147" xt="SPCLICK" xtlinkname="Footer_Navigation_About">Sobre</a><br>
-          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="915148" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">Para bibliotecas</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">Para los investigadores</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Productos &amp; Servicios</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">Para clientes</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Eventos</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">Sobre</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
         </div>
       </div>
       <div class="col-md-2 col-xs-6">
         <div class="single_ft quicklinks">
           <h4>Soporte</h4><!--Support-->
-          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915149" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Centro de Apoyo</a><br>
-          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="915150" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Herramientas y recursos</a><br>
-          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="915151" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Seminarios web de formación</a><br>
-          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="915152" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Centro de Apoyo</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Herramientas y recursos</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Seminarios web de formación</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
         </div>
       </div>
     </div>
@@ -924,12 +924,12 @@ $( document ).ready(function() {
 <div class="main_footer">
   <div class="container links col-xs-12">
     <div style="text-align: center;">
-      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="915153" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
-      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="915154" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
-      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="915155" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
       <div id="teconsent" style="display: inline;"></div>
-      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="915156" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
-      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="915157" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
     </div>
   </div>
 </div><!-- /.main_footer -->
