--- a/confirmation - Chinese Simplified (CN).html
+++ b/confirmation - Chinese Simplified (CN).html
@@ -4,14 +4,13 @@
 <title>ProQuest Preference Center Confirmation</title>
 <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-<meta http-equiv="content-type" content="text/html;charset=utf-8">
+<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
+<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com">
 <meta name="com.silverpop.defaultsource" content="Web">
-<meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
+<meta name="com.silverpop.cothost" content="engage4.silverpop.com">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
@@ -25,138 +24,8 @@
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
-
-<script src="https://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
-<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="https://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
-<script src="https://www.proquest.com/includes/bootstrap.min.js"></script>
-<script src="https://www.proquest.com/includes/parsley.min.js"></script>
-<script src="https://www.proquest.com/includes/jquery.form.min.js"></script>
-<script>
-function checkform(event) {
-	//Sets the date for the "Last Touch Lead Source Date"
-	var today = new Date();
-	var dd = today.getDate();
-	var mm = today.getMonth()+1; //January is 0!
-	var yyyy = today.getFullYear();
-
-	if (dd < 10) { dd = '0'+dd }
-	if (mm < 10) { mm = '0'+mm }
-	today = mm+'/'+dd+'/'+yyyy;
-	document.getElementById("Last Touch Lead Source Date").value = today;
-
-	// If there is a comment included then "Direct Inquiry" if not then "Marketing Accepted Lead"
-	var myForm = document.contact;
-	if (myForm.comment.value == "") {
-		document.getElementById("Lead Status").value = "Marketing Accepted Lead";
-	} else {
-		document.getElementById("Lead Status").value = "Direct Inquiry";
-	}
-}
-</script>
-</head>
-
-<body>
-<!--[if lt IE 7]>
-	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
-<div class="header-area">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-default">
-          <div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> <span class="sr-only">Toggle navigation</span></button>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a  name="TopNav_SupportCenter" xtlinkname="TopNav_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850600">Support Center |</a></li>
-                <li><a  name="TopNavNews" xtlinkname="TopNavNews" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/news/" xthyperlink="850601">News |</a></li>
-                <li><a  name="TopNav_Contact" xtlinkname="TopNav_Contact" xt="SPCLICKSTREAM" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="850602">Contact</a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="proquest_part">
-  <div class="container">
-    <div class="col-md-12">
-      <div class="inner_proquest"><a  xtlinkname="Top_PQ_Logo" xt="SPCLICKSTREAM" name="Top_PQ_Logo" href="https://www.proquest.com" xthyperlink="850603"><img  contentid="21211398" spname="logo_2.jpg" alt="" class="img-responsive" src="logo_2.jpg" /></a></div>
-    </div>
-  </div>
-</div>
-
-<div class="background_part">
-  <div class="container">&nbsp;</div>
-
-  <div class="overview_part">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="left_overview">
-          <h3>非常感谢您输入的信息，您的电子邮件偏好设置已经更新！</h3>
-          <h3>如需了解更多信息，请浏览我们的博客、新闻或LibGuides。</h3>
-          <!--<p>This is where we will put the link to the gated content or a simple thank you for submitting their form information. This area can be as long or as short as we want it to be, fitting to the needs of the confirmation page.</p>-->
-          <p>&nbsp;</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="footer_one">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>导航栏</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="921000" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">图书馆用户</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="921001" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">研究人员</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="921002" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">产品与服务</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="921003" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">客户</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="921004" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">活动</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="921005" xt="SPCLICK" xtlinkname="Footer_Navigation_About">关于ProQuest</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="921006" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">博客</a>
-          </div>
-        </div>
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>支持页面</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="921007" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">支持中心</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="921008" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">工具与资源</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="921009" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">网络培训</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="921010" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
-          </div>
-        </div>
-      </div><!-- .col-md-12 -->
-    </div><!-- .container -->
-  </div><!-- footer_one -->
-
-  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
-  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
-
-  <div class="main_footer">
-    <div class="container links col-xs-12">
-      <div style="text-align: center;">
-        <a  name="BottomNav_Privacy" xtlinkname="BottomNav_Privacy" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="850615">Privacy</a>
-        <a  name="BottomNav_TermsofUse" xtlinkname="BottomNav_TermsofUse" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="850616">Terms of Use</a>
-        <a  name="BottomNav_Cookies" xtlinkname="BottomNav_Cookies" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="850617">Cookies</a>
-        <div id="teconsent" style="display: inline;"></div>
-        <a  xtwebform="null" xturl="" target="_blank" name="BottomNav_Accessibility" xtlinkname="BottomNav_Accessibility" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="850618">Accessibility</a>
-        <a  name="BottomNav_DMCAPolicy" xtlinkname="BottomNav_DMCAPolicy" xt="SPCLICKSTREAM" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="850619">DMCA Policy</a>
-      </div>
-    </div>
-  </div><!-- /.main_footer -->
-
-  </div><!-- .container -->
-</div><!-- .background-part-none -->
-
-<style>
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/print-stylesheet.css" media="print" />
+<style type="text/css">
 .main_footer {
   float: left;
   width: 100%;
@@ -177,14 +46,131 @@ a:hover, a:focus {
 }
 </style>
 
-<script>
-	// function to clear the form if it's not the person who opened it. Useful for people accessing via a public computer
-	function myFunction() {
-		document.getElementById("contact").reset();
-	}
-</script>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+</head>
 
-</body>
+<body>
+<!--[if lt IE 7]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+
+
+<!-- ============ START Header ============ -->
+
+<div class="header-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button aria-expanded="false" data-target="#navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+              </button>
+            </div><!-- /.navbar-header -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div id="navbar-collapse-1" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/APAC-CN/cn-contact/">Contact</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+      </div>
+    </div>
+  </div>
+</div><!-- /.header-area -->
+
+<div class="proquest_part">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="inner_proquest">
+        <a href="https://www.proquest.com/APAC-CN/" target="_blank">
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="21966428" />
+        </a>
+      </div>
+    </div>
+  </div>
+</div><!-- /.proquest_part -->
+
+<!-- ============ END Header ============ -->
+
+
+<!-- ============ START Main Body ============ -->
+<div class="background_part">
+
+  <div class="container">&nbsp;</div>
+
+  <div class="overview_part">
+    <div class="container">
+      <div class="col-md-12">
+        <div class="left_overview">
+          <h3>非常感谢您输入的信息，您的电子邮件偏好设置已经更新！</h3>
+          <h3>如需了解更多信息，请浏览我们的博客、新闻或LibGuides。</h3>
+          <!--<p>This is where we will put the link to the gated content or a simple thank you for submitting their form information. This area can be as long or as short as we want it to be, fitting to the needs of the confirmation page.</p>-->
+          <p>&nbsp;</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+<!-- ============ END Main Body ============ -->
+
+
+<!-- ============ START Footer ============ -->
+
+<div class="footer_one">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>导航栏</h4><!--Navigation-->
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">图书馆用户</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">研究人员</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">产品与服务</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">客户</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">活动</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">关于ProQuest</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">博客</a>
+        </div>
+      </div>
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>支持页面</h4><!--Support-->
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">支持中心</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">工具与资源</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">网络培训</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- /.footer_one -->
+
+<!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+<script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
+
+<div class="main_footer">
+  <div class="container links col-xs-12">
+    <div style="text-align: center;">
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+      <div id="teconsent" style="display: inline;"></div>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
+    </div>
+  </div>
+</div><!-- /.main_footer -->
+
+<!-- ============ END Footer ============ -->
 
 <!-- Google Tag Manager -->
 <script>
@@ -196,4 +182,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 <!-- End Google Tag Manager -->
 
+</body>
 </html>
