--- a/unsubscribe - Chinese Simplified (CN).html
+++ b/unsubscribe - Chinese Simplified (CN).html
@@ -4,8 +4,9 @@
 <title>ProQuest退订</title>
 <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-<meta http-equiv="content-type" content="text/html;charset=utf-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
@@ -19,36 +20,27 @@
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
 <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
-
-<script src="https://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
-<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="https://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
-<script src="https://www.proquest.com/includes/bootstrap.min.js"></script>
-<script src="https://www.proquest.com/includes/parsley.min.js"></script>
-<script src="https://www.proquest.com/includes/jquery.form.min.js"></script>
-
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/print-stylesheet.css" media="print" />
 <style type="text/css">
 .header {
-	color: #333333;
-	font-weight: bold;
+  color: #333333;
+  font-weight: bold;
 }
 #h3header {
-	font-size: 20px;
-	color: #333333;
-	font-weight: bold;
-}
-#formfontcolor {
-	color: #333333;
-!important font-size:15px;
+  font-size: 20px;
+  color: #333333;
+  font-weight: bold;
 }
 hr {
-	display: block;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-	margin-left: auto;
-	margin-right: auto;
-	border-style: inset;
-	border-width: 2px;
+  display: block;
+  margin: 0.5em auto 0.5em auto;
+  border: 2px inset;
+}
+.pq-lead-text {
+  font-size: 16px;
+}
+.pq-form-label-dark {
+  color: #333333;
 }
 .required {
   color: #a51f1e;
@@ -72,145 +64,193 @@ a:hover, a:focus {
   text-decoration: none;
 }
 </style>
+
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 
 <body>
 <!--[if lt IE 7]>
-	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+
+<!-- ============ START Header ============ -->
 
 <div class="header-area">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <nav class="navbar navbar-default">
-          <div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display -->
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-              <button aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" /> <span class="icon-bar" /> <span class="icon-bar" /> </button>
-            </div>
+              <button aria-expanded="false" data-target="#navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+              </button>
+            </div><!-- /.navbar-header -->
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
+            <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a  xtlinkname="TopNav_SupportCenter" xt="SPCLICK" name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850560">Support Center |</a></li>
-                <li><a  xtlinkname="TopNavNews" xt="SPCLICK" name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="850561">News |</a></li>
-                <li><a  xtlinkname="TopNav_Contact" xt="SPCLICK" name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="850562">Contact</a></li>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/APAC-CN/cn-contact/">Contact</a></li>
               </ul>
-            </div>
-            <!-- /.navbar-collapse --></div>
-          <!-- /.container-fluid --> </nav>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
       </div>
     </div>
   </div>
-</div>
+</div><!-- /.header-area -->
 
 <div class="proquest_part">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_proquest"><img width="169" height="66" class="img-responsive" alt="ProQuest Logo" src="logo_3.jpg" name="logo_3.jpg" title="ProQuest Logo" contentid="21211396" xt="SPIMAGE" spname="logo_5.jpg" /></div>
+      <div class="inner_proquest">
+        <a href="https://www.proquest.com/APAC-CN/" target="_blank">
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="21966428" />
+        </a>
+      </div>
     </div>
   </div>
-</div>
+</div><!-- /.proquest_part -->
 
 <div class="arts_db_part">
   <div class="container">
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p>ProQuest | Your Subscription Preferences</p>
+          <p><a href="https://www.proquest.com/APAC-CN/" style="color: #00a0df; text-decoration: none;">ProQuest</a> > Your Email Preferences</p>
         </div>
-        <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px; color: #33333; font-family: 'Open Sans'">退订</span></div>
+        <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">退订</span></div>
       </div>
     </div>
   </div>
-</div>
+</div><!-- /.arts_db_part -->
 
-<div style="color:" class="background_part">
+<div class="background_part">
   <div class="container-fluid">
     <div class="col-md-12">
       <div class="inner_subscription">&nbsp;</div>
     </div>
   </div>
-</div>
+</div><!-- /.background_part -->
 
+<!-- ============ END Header ============ -->
+
+
+<!-- ============ START Intro Text ============ -->
 <div class="small_para_part">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_small">
-        <p><span style="font-size: 16px; color: #333333; 'font-family': 'Open Sans'">非常遗憾您选择停止接收我们的电子邮件！我们能理解每天收到大量邮件给您带来的困扰，您仅希望通过退订邮件，来精简邮件接收的数量。</span></p>
+        <p class="pq-lead-text">非常遗憾您选择停止接收我们的电子邮件！我们能理解每天收到大量邮件给您带来的困扰，您仅希望通过退订邮件，来精简邮件接收的数量。</p>
+    </div>
+  </div>
+</div>
+<!-- ============ END Intro Text ============ -->
+
+
+<!-- ============ START Main Form Body ============ -->
+<div class="main_form_part">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="panel">
         <h2>请问您近期查询过电子邮件订阅偏好设置吗？</h2>
-        <p>基于用户设置的电子邮件订阅偏好，我们力求为大家提供优质、相关性强的内容。如果您希望接收更精简、不同类型的信息，我们建议您不用退订，<a href="https://go.proquest.com/preferences-cn" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="850563" style="color: #00a0df; text-decoration:none">而是通过重新设置电子邮件的偏好来实现</a> 。</p>
+        <p>基于用户设置的电子邮件订阅偏好，我们力求为大家提供优质、相关性强的内容。
+        如果您希望接收更精简、不同类型的信息，我们建议您不用退订，<a href="https://go.proquest.com/preferences-cn" name="update_preferences" target="_blank" style="color: #00a0df; text-decoration:none">而是通过重新设置电子邮件的偏好来实现</a>。</p>
+
+      <!-- ======== START FORM ======== -->
+        <form id="unsubscribe" method="post" style="margin-top: 20px;">
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label class="pq-form-label-dark">Email <span class="required">*</span></label>
+                <input type="text" class="form-control" id="email" name="email" data-required="true" data-type="email" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <input type="submit" value="退订" class="btn btn-primary btn-lg" id="submit" name="submit" />
+              </div>
+            </div>
+          </div>
+
+<!--
+          <h2>Instead of leaving for good you could just take a break.</h2>
+          <p>Click Pause to stop recieving mailing from us for 60 days.</p>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <input type="submit" value="Pause" class="btn btn-primary btn-lg" name="SP_SNOOZE_SUBMIT" />
+              </div>
+            </div>
+          </div>
+-->
+
+        </form>
+      <!-- ======== END FORM ======== -->
+
       </div>
     </div>
   </div>
 </div>
+<!-- ============ END Main Form Body ============ -->
 
-<div class="first_form_part">
+
+<!-- ============ START Footer ============ -->
+
+<div class="footer_one">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_first_one">
-
-      <form id="unsubscribe" method="post">
-        <ul class="clearfix">
-          <li class="clearfix">
-            <label id="formfontcolor">Email <span class="required">*</span></label>
-            <input type="text" name="email" class="form-control" id="email" data-required="true" data-type="email" />
-          </li>
-          <br />
-          <li class="clearfix">
-            <input type="submit" id="submit" name="submit" value="退订" class="btn btn-primary btn-lg" />
-          </li>
-        </ul>
-      </form>
-
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>导航栏</h4><!--Navigation-->
+          <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">图书馆用户</a><br>
+          <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">研究人员</a><br>
+          <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">产品与服务</a><br>
+          <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">客户</a><br>
+          <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">活动</a><br>
+          <a name="Footer_Navigation_About" href="https://www.proquest.com/about">关于ProQuest</a><br>
+          <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">博客</a>
+        </div>
+      </div>
+      <div class="col-md-2 col-xs-6">
+        <div class="single_ft quicklinks">
+          <h4>支持页面</h4><!--Support-->
+          <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">支持中心</a><br>
+          <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">工具与资源</a><br>
+          <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">网络培训</a><br>
+          <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
+        </div>
       </div>
     </div>
   </div>
+</div><!-- /.footer_one -->
 
-  <div class="footer_one">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>导航栏</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="921000" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">图书馆用户</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="921001" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">研究人员</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="921002" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">产品与服务</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="921003" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">客户</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="921004" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">活动</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="921005" xt="SPCLICK" xtlinkname="Footer_Navigation_About">关于ProQuest</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="921006" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">博客</a>
-          </div>
-        </div>
-        <div class="col-md-2 col-xs-6">
-          <div class="single_ft quicklinks">
-            <h4>支持页面</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="921007" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">支持中心</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="921008" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">工具与资源</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="921009" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">网络培训</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="921010" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
-          </div>
-        </div>
-      </div><!-- .col-md-12 -->
-    </div><!-- .container -->
-  </div><!-- footer_one -->
+<!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+<script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
 
-  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
-  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
-
-  <div class="main_footer">
-    <div class="container links col-xs-12">
-      <div style="text-align: center;">
-        <a  name="BottomNav_Privacy" xtlinkname="BottomNav_Privacy" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="850615">Privacy</a>
-        <a  name="BottomNav_TermsofUse" xtlinkname="BottomNav_TermsofUse" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="850616">Terms of Use</a>
-        <a  name="BottomNav_Cookies" xtlinkname="BottomNav_Cookies" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="850617">Cookies</a>
-        <div id="teconsent" style="display: inline;"></div>
-        <a  xtwebform="null" xturl="" target="_blank" name="BottomNav_Accessibility" xtlinkname="BottomNav_Accessibility" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="850618">Accessibility</a>
-        <a  name="BottomNav_DMCAPolicy" xtlinkname="BottomNav_DMCAPolicy" xt="SPCLICKSTREAM" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="850619">DMCA Policy</a>
-      </div>
+<div class="main_footer">
+  <div class="container links col-xs-12">
+    <div style="text-align: center;">
+      <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+      <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+      <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+      <div id="teconsent" style="display: inline;"></div>
+      <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+      <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
     </div>
-  </div><!-- /.main_footer -->
-</div><!-- .first_form_part -->
+  </div>
+</div><!-- /.main_footer -->
+
+<!-- ============ END Footer ============ -->
 
 </body>
-
 </html>
