GMS-12751, Added IMC contentID for pq-header-logo.jpg to all EN pages

--- a/confirmation - English (EN).html
+++ b/confirmation - English (EN).html
@@ -92,7 +92,7 @@ a:hover, a:focus {
     <div class="col-md-12">
       <div class="inner_proquest">
         <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom">
-          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="22083462" />
         </a>
       </div>
     </div>
@@ -113,9 +113,9 @@ a:hover, a:focus {
         <div class="left_overview">
           <h3>Done and done! We've got your email preferences updated.&nbsp;</h3>
           <h3>If you've got a few minutes, feel free to check out our 
-            <a href="https://www.proquest.com/blog/pqblog/" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_BlogLink" xt="SPCLICKSTREAM" xthyperlink="849040" xtlinkname="ConfirmationPage_BlogLink">blog</a>, read about ProQuest in the 
-            <a href="https://www.proquest.com/about/news/" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_NewsLink" xt="SPCLICKSTREAM" xthyperlink="849041" xtlinkname="ConfirmationPage_NewsLink">news</a> or view our collection of 
-            <a href="https://proquest.libguides.com" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_LibGuides" xt="SPCLICKSTREAM" xthyperlink="849042" xtlinkname="ConfirmationPage_LibGuides">LibGuides</a>.
+            <a href="https://www.proquest.com/blog/pqblog/" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_BlogLink">blog</a>, read about ProQuest in the 
+            <a href="https://www.proquest.com/about/news/" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_NewsLink">news</a> or view our collection of 
+            <a href="https://proquest.libguides.com" target="_blank" style="color:#00A0DF; text-decoration:none;" name="ConfirmationPage_LibGuides">LibGuides</a>.
           </h3>
           <!--<p>This is where we will put the link to the gated content or a simple thank you for submitting their form information. This area can be as long or as short as we want it to be, fitting to the needs of the confirmation page.</p>-->
           <p>&nbsp;</p>
