--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -111,7 +111,7 @@ a:hover, a:focus {
     <div class="col-md-12">
       <div class="inner_proquest">
         <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom">
-          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="22083462" />
         </a>
       </div>
     </div>
@@ -160,7 +160,7 @@ a:hover, a:focus {
       <div class="panel">
         <h2>Have you checked your preferences lately?</h2>
         <p>We strive to provide our subscribers with quality content that is relevant to them by using individual subscription preferences.
-        If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" style="color: #00a0df; text-decoration:none" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="849391">update your subscription preferences</a> instead of unsubscribing.</p>
+        If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" style="color: #00a0df; text-decoration:none">update your subscription preferences</a> instead of unsubscribing.</p>
 
       <!-- ======== START FORM ======== -->
         <form id="unsubscribe" method="post" style="margin-top: 20px;">
