GMS-12751, Added IMC contentID for pq-header-logo.jpg to all JP pages

--- a/confirmation - Japanese (JP).html
+++ b/confirmation - Japanese (JP).html
@@ -92,7 +92,7 @@ a:hover, a:focus {
     <div class="col-md-12">
       <div class="inner_proquest">
         <a href="https://www.proquest.com/APAC-JP/" target="_blank">
-          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="22088034" />
         </a>
       </div>
     </div>
