GMS-12751, Added Google Tag Manager code to all pages.
Used latest "6/15" version of GTM from Clickability template.

--- a/confirmation - Japanese (JP).html
+++ b/confirmation - Japanese (JP).html
@@ -172,14 +172,14 @@ a:hover, a:focus {
 
 <!-- ============ END Footer ============ -->
 
-<!-- Google Tag Manager -->
-<script>
-(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- Google Tag Manager 6/15 -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MCNB8L"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src=
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PKTQGK');
-</script>
+})(window,document,'script','dataLayer','GTM-MCNB8L');</script>
 <!-- End Google Tag Manager -->
 
 </body>
