--- a/unsubscribe - Japanese (JP).html
+++ b/unsubscribe - Japanese (JP).html
@@ -252,5 +252,15 @@ a:hover, a:focus {
 
 <!-- ============ END Footer ============ -->
 
+<!-- Google Tag Manager 6/15 -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MCNB8L"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MCNB8L');</script>
+<!-- End Google Tag Manager -->
+
 </body>
 </html>
