GMS-2583/16432, Added checkboxes for PQ Blog and EOS Blog
To Section 2 - Email Types (English page only).

--- a/update - English (EN).html
+++ b/update - English (EN).html
@@ -586,6 +586,21 @@ $( document ).ready(function() {
                 </div>
               </div>
 
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <input type="checkbox" value="PQ Blog" id="checkbox_2-5" name="email_type_pc_cbgroup" />
+                    <label class="pq-form-label" for="checkbox_2-5">ProQuest Blog</label>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <input type="checkbox" value="Extraordinary Stories Blog" id="checkbox_2-6" name="email_type_pc_cbgroup" />
+                    <label class="pq-form-label" for="checkbox_2-6">Extraordinary Stories Blog</label>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         <!-- ====== END Section 2 - Email Types ====== -->
